# num-absurd

./: LICENSE  Readme.md
rust/: Cargo.toml  Readme.md
rust/src/: lib.rs
